--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/hudson.plugins.jira.JiraProjectProperty.xml.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/hudson.plugins.jira.JiraProjectProperty.xml.erb
@@ -2,7 +2,7 @@
 <hudson.plugins.jira.JiraProjectProperty_-DescriptorImpl plugin="jira@1.39">
   <sites>
     <hudson.plugins.jira.JiraSite>
-      <url><%= @jira_url %></url>
+      <url>http://<%= @jira_host %></url>
       <useHTTPAuth>true</useHTTPAuth>
       <userName><%= @jira_username %></userName>
       <password><%= @jira_password %></password>
