[DMG-347] Fix codestyle and syntax
- Fix naming and line length
- Fix jira configuration source name
- Add alternativeUrl property into jira configuration
- Set supportsWikiStyleComment property to "true" in jira configuration

--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/hudson.plugins.jira.JiraProjectProperty.xml.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/hudson.plugins.jira.JiraProjectProperty.xml.erb
@@ -3,10 +3,11 @@
   <sites>
     <hudson.plugins.jira.JiraSite>
       <url>http://<%= @jira_host %></url>
+      <alternativeUrl>https://<%= @jira_host %></alternativeUrl>
       <useHTTPAuth>true</useHTTPAuth>
       <userName><%= @jira_username %></userName>
       <password><%= @jira_password %></password>
-      <supportsWikiStyleComment>false</supportsWikiStyleComment>
+      <supportsWikiStyleComment>true</supportsWikiStyleComment>
       <recordScmChanges>false</recordScmChanges>
       <updateJiraIssueForAllStatus>true</updateJiraIssueForAllStatus>
     </hudson.plugins.jira.JiraSite>
