[DMG-397] Move configuration from settings.xml to maven-global-settings.xml

--- a/cookbooks/cicd_infrastructure/templates/default/jenkins/jbehave_mirrors_settings.xml.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/jenkins/jbehave_mirrors_settings.xml.erb
@@ -1,20 +1,5 @@
-    <mirrors>
-        <mirror>
-            <id><%= @jbehave_framework_repo_id %></id>
-            <url>${env.NEXUS_URL}/content/repositories/<%= @jbehave_framework_repo_id %>/</url>
-            <mirrorOf><%= @jbehave_framework_repo_id %></mirrorOf>
-        </mirror>
-    </mirrors>
-
-    <servers>
-        <server>
-            <id><%= @jbehave_framework_repo_id %></id>
-            <username><%= @nexus_username %></username>
-            <password><%= @nexus_password %></password>
-        </server>
-    </servers>
-
-
-    <activeProfiles>
-        <activeProfile><%= @jbehave_framework_repo_id %></activeProfile>
-    </activeProfiles>
+    &lt;mirror&gt;
+	&lt;id&gt;<%= @jbehave_framework_repo_id %>&lt;/id&gt;
+	&lt;url&gt;${env.NEXUS_URL}/content/repositories/<%= @jbehave_framework_repo_id %>/&lt;/url&gt;
+	&lt;mirrorOf&gt;<%= @jbehave_framework_repo_id %>&lt;/mirrorOf&gt;
+    &lt;/mirror&gt;
