--- a/cookbooks/cicd_infrastructure/templates/default/jenkins/maven-global-settings-files.xml.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/jenkins/maven-global-settings-files.xml.erb
@@ -157,7 +157,7 @@ under the License.
       &lt;password&gt;<%= @nexus_password %>&lt;/password&gt;
     &lt;/server&gt;
     &lt;server&gt;
-      &lt;id&gt;gd_jbehave_framework-snapshots&lt;/id&gt;
+      &lt;id&gt;<%= @jbehave_framework_repo_id %>&lt;/id&gt;
       &lt;username&gt;<%= @nexus_username %>&lt;/username&gt;
       &lt;password&gt;<%= @nexus_password %>&lt;/password&gt;
     &lt;/server&gt;
@@ -200,6 +200,9 @@ under the License.
       &lt;name&gt;Macen Central Mirror.&lt;/name&gt;
       &lt;url&gt;${env.NEXUS_URL}/content/repositories/central&lt;/url&gt;
     &lt;/mirror&gt;
+<% if @use_jbehave_proxy == 'true' %>
+<%= render 'jenkins/jbehave_mirrors_settings.xml.erb' %>
+<% end %>
   &lt;/mirrors&gt;
   
   &lt;!-- profiles
@@ -257,14 +260,18 @@ under the License.
       &lt;id&gt;nexus-profile&lt;/id&gt;
       &lt;repositories&gt;
         &lt;repository&gt;
-          &lt;id&gt;builds&lt;/id&gt;
+          &lt;id&gt;builds-all&lt;/id&gt;
           &lt;name&gt;Corp nexus&lt;/name&gt;
-	  &lt;url&gt;<%= @nexus_url %>&lt;/url&gt;
+	  &lt;url&gt;<%= @nexus_url %>/content/repositories/builds-all&lt;/url&gt;
           &lt;layout&gt;default&lt;/layout&gt;
           &lt;snapshotPolicy&gt;always&lt;/snapshotPolicy&gt;
         &lt;/repository&gt;
       &lt;/repositories&gt;
     &lt;/profile&gt;
+
+<% if @use_jbehave_proxy == 'true' %>
+<%= render 'jenkins/jbehave_profile_settings.xml.erb' %>
+<% end %>
 
 
     &lt;!--
@@ -313,6 +320,9 @@ under the License.
   --&gt;
   &lt;activeProfiles&gt;
     &lt;activeProfile&gt;nexus-profile&lt;/activeProfile&gt;
+<% if @use_jbehave_proxy == 'true' %>
+    &lt;activeProfile&gt;<%= @jbehave_framework_repo_id %>&lt;/activeProfile&gt;
+<% end %>
   &lt;/activeProfiles&gt;
 &lt;/settings&gt;</content>
         <serverCredentialMappings/>
