[DMG-380] Fix run selenium tests in integration-tests job

--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
@@ -230,7 +230,7 @@ build.addAction(pa);
       }
 	    maven {
 		    rootPOM("spring-petclinic-test/pom.xml")
-		    goals('-P integration-test clean verify -Dspring.profiles.active=remote -DREMOTE_WEBDRIVER_URL=${SELENIUM_URL} -Dpetclinic.url=${PETCLINIC_URL}')
+		    goals('-P integration-test clean verify -Dspring.profiles.active=remote -DREMOTE_WEBDRIVER_URL=${SELENIUM_URL} -Dbrowser.version= -Dpetclinic.url=${PETCLINIC_URL}')
 		    mavenInstallation(maven_installation)
 		    configure { project ->
 			    project << globalSettings(
