[DMG-382] Make build parallel build for review and fb build jobs

--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
@@ -76,6 +76,7 @@ job(type: Maven) {
       project("${project_name}", "dev")
     }
   }
+  concurrentBuild(true)
   goals('-e')
   goals('clean')
   goals('install')
@@ -283,6 +284,7 @@ job(type: Maven) {
         mavenInstallation(maven_installation)
     }
   }
+  concurrentBuild(true)
   goals('-e')
   goals('clean')
   goals('install')
